Gambeta da edição do front

--- a/client/src/Dashboard.css
+++ b/client/src/Dashboard.css
@@ -1,9 +1,14 @@
+.wrapper {
+    justify-content: center;
+}
+
 .fadeOut{
     font-size: 30px;
     animation-name: fadeout;
     animation-delay: 1s;
     animation-duration: 1.2s;
     animation-fill-mode: forwards;
+    justify-content: center;
 }
 .fadeIn{
     opacity: 0;
@@ -11,14 +16,31 @@
     animation-delay: 2.4s;
     animation-duration: 1.2s;
     animation-fill-mode: forwards;
+    font-size: 30px;
+    box-shadow: 0 0 30px rgba(48, 48, 48, 0.7);
+    
+    /* posiciona a div adequadamente */
+    height: 98vh;
+    width: 98vw;
+    position: absolute;
+    top: 2vh; left: 1vw;
+    background: rgba(43, 121, 48, 0.8);
+
+    /* ajusta texto */
+    /* padding: 2vh 1vw 1vh; */
+    text-align: center;
+    color:rgb(243, 243, 243);
+
 }
 
 @keyframes fadeout {
     0% {opacity: 1;}
-    100% {opacity: 0;}
+    100% {opacity: 0;
+          display: none;}
 }
 
 @keyframes fadein {
-    0% {opacity: 0;}
+    0% {opacity: 0;
+         display: none;}
     100% {opacity: 1;}
 }
