formulário com campos adicionais

--- a/client/src/Dashboard.css
+++ b/client/src/Dashboard.css
@@ -1,15 +1,33 @@
-.wrapper {
+.zero {
+    margin: 30px;
+    padding: 40px;
+    background-color: black;
+    text-align: center;
+}
+
+.pageContainer {
+    display: flex;
+    flex-direction: column;
+
+    width: 100vw;
+    height: 100vh;
+
+    align-items: center;
     justify-content: center;
+    overflow: scroll;
 }
 
 .fadeOut{
     font-size: 30px;
+    position: absolute;
+    top: 50%;
     animation-name: fadeout;
     animation-delay: 1s;
     animation-duration: 1.2s;
     animation-fill-mode: forwards;
     justify-content: center;
 }
+
 .fadeIn{
     opacity: 0;
     animation-name: fadein;
@@ -20,13 +38,15 @@
     box-shadow: 0 0 15px rgba(48, 48, 48, 1);
     
     /* posiciona a div adequadamente */
-    height: 96vh;
-    width: 98vw;
-    position: absolute;
-    top: 2vh; left: 1vw;
+    position: fixed;
+    top: -4vh;
+    height: fit-content;
+    width: 90vw;
+    padding: 1%;
+    margin: 3%;
     /* cor solida */
     /* background: rgba(43, 121, 48, 0.8); */
-
+    
     /* gradiente */
     background-image: linear-gradient(to top right, rgba(35, 77, 38, 0.83), rgba(43, 121, 48, 0.87));
 
@@ -34,14 +54,11 @@
     /* ajusta texto */
     /* padding: 2vh 1vw 1vh; */
     text-align: center;
-    color:rgb(243, 243, 243);
-
 }
 
 @keyframes fadeout {
     0% {opacity: 1;}
-    100% {opacity: 0;
-          display: none;}
+    100% {opacity: 0;}
 }
 
 @keyframes fadein {
