--- a/client/src/Dashboard.css
+++ b/client/src/Dashboard.css
@@ -3,18 +3,20 @@
     padding: 40px;
     background-color: black;
     text-align: center;
+    position: relative;
+    top: 0;
+    left: 0;
 }
 
 .pageContainer {
     display: flex;
     flex-direction: column;
 
-    width: 100vw;
     height: 100vh;
+    width: 100vw;
 
     align-items: center;
-    justify-content: center;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .fadeOut{
@@ -29,31 +31,37 @@
 }
 
 .fadeIn{
+    /* animacao */
     opacity: 0;
     animation-name: fadein;
     animation-delay: 2.4s;
     animation-duration: 1.2s;
     animation-fill-mode: forwards;
-    font-size: 30px;
+
+    /* efeito sombra */
     box-shadow: 0 0 15px rgba(48, 48, 48, 1);
     
-    /* posiciona a div adequadamente */
-    position: fixed;
-    top: -4vh;
-    height: fit-content;
-    width: 90vw;
+    /* posiciona a div adequadamente, margens e paddings */
+    top: -3vh;
+    width: 92vw;
     padding: 1%;
     margin: 3%;
-    /* cor solida */
+
+    /* cor de fundo solida */
     /* background: rgba(43, 121, 48, 0.8); */
     
-    /* gradiente */
-    background-image: linear-gradient(to top right, rgba(35, 77, 38, 0.83), rgba(43, 121, 48, 0.87));
+    /* cor de fundo gradiente */
+    background-image: linear-gradient(to top right, rgba(43, 121, 48, 1), rgba(44, 171, 124, 1));
+}
 
+.ContainerForm {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 
-    /* ajusta texto */
-    /* padding: 2vh 1vw 1vh; */
-    text-align: center;
+.ContainerButton {
+    align-content: center;
 }
 
 @keyframes fadeout {
