Página do usuário atualizada

--- a/client/src/HomeButton.css
+++ b/client/src/HomeButton.css
@@ -6,7 +6,8 @@
     
 .icon {
     position: absolute;
-    top: 3vh; left: 3vh;
+    top: 2vh; left: 36vw;
     width: 50px;
     height: auto;
+    z-index: 100;
 }
