--- a/client/src/UserPage.css
+++ b/client/src/UserPage.css
@@ -33,5 +33,9 @@
 .userInfo {
     background-color: rgb(248, 249, 250);
     margin: 0 48px;
-    padding: 12px;
+    padding: 24px 12px;
+}
+
+.userActions {
+    color: black;    
 }
