--- a/client/src/Dashboard.css
+++ b/client/src/Dashboard.css
@@ -46,7 +46,9 @@
     animation-delay: 2.4s;
     animation-duration: 1.2s;
     animation-fill-mode: forwards;
+}
 
+.backgroundFX {
     /* efeito sombra */
     box-shadow: 0 0 15px var(--sombra);
     
